<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:hint="@string/edit_task" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextTask"
            android:layout_below="@+id/editTextTask"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:hint="@string/edit_complete" />

        <EditText
            android:id="@+id/editTextRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextTask"
            android:layout_below="@+id/editTextComplete"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:hint="@string/edit_remind" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextTask"
            android:layout_below="@+id/editTextRemind"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:hint="@string/edit_time" />

        <TextView
            android:id="@+id/textViewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTask"
            android:layout_toRightOf="@+id/editTextTask"
            android:layout_alignParentLeft="true"
            android:text="@string/task"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/textViewComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextComplete"
            android:layout_toRightOf="@+id/editTextComplete"
            android:layout_alignParentLeft="true"
            android:text="@string/complete"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/textViewRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextRemind"
            android:layout_toRightOf="@+id/editTextRemind"
            android:layout_alignParentLeft="true"
            android:text="@string/remind"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTime"
            android:layout_toRightOf="@+id/editTextTime"
            android:layout_alignParentLeft="true"
            android:text="@string/time"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="run"
            android:text="@string/button_save"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:visibility="gone">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/delete"
                android:textSize="@dimen/text_size"/>

            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/edit"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>